src/objects/SmartPay_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Barclays SmartPay is our credit card payment provider.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this on one and only one settings record and the code will use it.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <inlineHelpText>TEST or LIVE only.</inlineHelpText>
        <label>Environment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMAC_key__c</fullName>
        <inlineHelpText>Key with which we sign our query string params before sending the user over the SmartPay URL. Secret.</inlineHelpText>
        <label>HMAC key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_account__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Merchant accounts are configured in the SmartPay backend.</inlineHelpText>
        <label>Merchant account</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skin_code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Skins are configured in the SmartPay backend and relate to SmartPay accounts.</inlineHelpText>
        <label>Skin code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SmartPay Settings</label>
</CustomObject>